--- a/exam.ui
+++ b/exam.ui
@@ -6,29 +6,30 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>792</width>
-    <height>666</height>
+    <width>700</width>
+    <height>840</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1920</width>
+    <height>1080</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QWidget" name="verticalLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>60</y>
-     <width>771</width>
-     <height>551</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout"/>
-  </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>360</x>
-     <y>630</y>
+     <x>310</x>
+     <y>810</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -37,18 +38,28 @@
     <string>完成考试</string>
    </property>
   </widget>
-  <widget class="QLabel" name="info">
+  <widget class="QScrollArea" name="scrollArea">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>30</y>
-     <width>761</width>
-     <height>21</height>
+     <x>20</x>
+     <y>10</y>
+     <width>661</width>
+     <height>781</height>
     </rect>
    </property>
-   <property name="text">
-    <string/>
+   <property name="widgetResizable">
+    <bool>true</bool>
    </property>
+   <widget class="QWidget" name="scrollAreaWidget">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>659</width>
+      <height>779</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
