--- a/login.ui
+++ b/login.ui
@@ -113,6 +113,9 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
   </widget>
   <widget class="QPushButton" name="pushButton_quit">
    <property name="geometry">
